log2.txt
[2016-05-11 00:40:46 +0000] [9556] [INFO] Starting gunicorn 19.4.5
[2016-05-11 00:40:46 +0000] [9556] [INFO] Listening at: http://127.0.0.1:8000 (9556)
[2016-05-11 00:40:46 +0000] [9556] [INFO] Using worker: sync
[2016-05-11 00:40:46 +0000] [9561] [INFO] Booting worker with pid: 9561
[2016-05-11 00:40:46 +0000] [9561] [ERROR] Exception in worker process:
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/arbiter.py", line 515, in spawn_worker
    worker.init_process()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/workers/base.py", line 122, in init_process
    self.load_wsgi()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/workers/base.py", line 130, in load_wsgi
    self.wsgi = self.app.wsgi()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/app/wsgiapp.py", line 65, in load
    return self.load_wsgiapp()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/app/wsgiapp.py", line 52, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/util.py", line 357, in import_app
    __import__(module)
  File "/home/jan/parrot/web.py", line 28
    for file in sorted(glob.glob(filename + "*.flac")):
    ^
IndentationError: unexpected indent
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/arbiter.py", line 515, in spawn_worker
    worker.init_process()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/workers/base.py", line 122, in init_process
    self.load_wsgi()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/workers/base.py", line 130, in load_wsgi
    self.wsgi = self.app.wsgi()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/app/wsgiapp.py", line 65, in load
    return self.load_wsgiapp()
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/app/wsgiapp.py", line 52, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/usr/local/lib/python2.7/dist-packages/gunicorn/util.py", line 357, in import_app
    __import__(module)
  File "/home/jan/parrot/web.py", line 28
    for file in sorted(glob.glob(filename + "*.flac")):
    ^
IndentationError: unexpected indent
[2016-05-11 00:40:46 +0000] [9561] [INFO] Worker exiting (pid: 9561)
[2016-05-11 00:40:46 +0000] [9556] [INFO] Shutting down: Master
[2016-05-11 00:40:46 +0000] [9556] [INFO] Reason: Worker failed to boot.
[2016-05-11 00:41:35 +0000] [9636] [INFO] Starting gunicorn 19.4.5
[2016-05-11 00:41:35 +0000] [9636] [INFO] Listening at: http://127.0.0.1:8000 (9636)
[2016-05-11 00:41:35 +0000] [9636] [INFO] Using worker: sync
[2016-05-11 00:41:35 +0000] [9641] [INFO] Booting worker with pid: 9641
[2016-05-11 00:41:37 +0000] [9636] [INFO] Handling signal: hup
[2016-05-11 00:41:37 +0000] [9636] [INFO] Hang up: Master
[2016-05-11 00:41:37 +0000] [9661] [INFO] Booting worker with pid: 9661
[2016-05-11 00:42:28 +0000] [9678] [INFO] Starting gunicorn 19.4.5
[2016-05-11 00:42:28 +0000] [9678] [ERROR] Connection in use: ('127.0.0.1', 8000)
[2016-05-11 00:42:28 +0000] [9678] [ERROR] Retrying in 1 second.
[2016-05-11 00:42:29 +0000] [9678] [ERROR] Connection in use: ('127.0.0.1', 8000)
[2016-05-11 00:42:29 +0000] [9678] [ERROR] Retrying in 1 second.
[2016-05-11 00:42:29 +0000] [9678] [ERROR] Connection in use: ('127.0.0.1', 8000)
[2016-05-11 00:42:29 +0000] [9678] [ERROR] Retrying in 1 second.
[2016-05-11 00:42:29 +0000] [9636] [INFO] Handling signal: hup
[2016-05-11 00:42:29 +0000] [9636] [INFO] Hang up: Master
[2016-05-11 00:42:29 +0000] [9685] [INFO] Booting worker with pid: 9685
[2016-05-11 00:42:30 +0000] [9678] [ERROR] Connection in use: ('127.0.0.1', 8000)
[2016-05-11 00:42:30 +0000] [9678] [ERROR] Retrying in 1 second.
[2016-05-11 00:42:31 +0000] [9678] [ERROR] Connection in use: ('127.0.0.1', 8000)
[2016-05-11 00:42:31 +0000] [9678] [ERROR] Retrying in 1 second.
[2016-05-11 00:42:32 +0000] [9678] [ERROR] Can't connect to ('127.0.0.1', 8000)
[2016-05-11 00:45:08 +0000] [9636] [INFO] Handling signal: hup
[2016-05-11 00:45:08 +0000] [9636] [INFO] Hang up: Master
[2016-05-11 00:45:08 +0000] [9949] [INFO] Booting worker with pid: 9949
